# hytools

./: .gitignore  .readthedocs.yml  CITATION.cff  LICENSE.txt  README.md  algorithm_config.yaml  pyproject.toml  requirements.txt  setup.py
.imgspec/: algorithm_config.yaml  cmr.yaml  get_from_context.py  get_paths_from_granules.py  imgspec_run.sh  update_config.py
.imgspec/trait_models/: PLSR_500_raw_coef_Carbon_400_2400_v0_1_sub20.json  PLSR_500_raw_coef_Carotenoids_area_400_2400_v0_1_sub20.json  PLSR_500_raw_coef_Chlorophylls_area_400_2400_v0_1_sub20.json  PLSR_500_raw_coef_LMA_400_2400_v0_1_sub20.json  PLSR_500_raw_coef_Lignin_400_2400_v0_1_sub20.json  (+8 more)
command_line/: group_outlier.py  image_correct.py  neon2envi.py  neon_hdf_to_envi.py  trait_estimate.py  transform.py
configs/: ic_config_envi.json  ic_config_neon.json  image_correct_json_generate.py  trait_config_envi.json  trait_estimate_json_generate.py
data/: hytools_plsr_fake_trait_1.json  hytools_plsr_fake_trait_2.json  hytools_plsr_fake_trait_3.json
docs/source/: .#about.rst  (+19 more)
examples/: FlexBRDF_tutorial.md  hytools_basics_notebook.ipynb  netcdf_glt.md  separated_flexbrdf.md
hytools/: __init__.py  base.py
scripts/: image_correct.py  image_correct_combine_sample_chtc.py  image_correct_export_nc.py  image_correct_topogroup.py  image_correct_with_glt.py  imagepoints_ext_glt_ht.py  neon2envi.py  neon2envi_bsq.py  plsr_model_formatting.py  run_single_process_merge.py  trait_estimate.py  trait_estimate_inde_chunk_outside.py  trait_estimate_nc.py  trait_estimate_no_anc.py  transform.py
tests/: test_io.py
(+94 files in other folders)
